# gisli_monorepo

./: .bazelrc  .gitignore  MODULE.bazel  README.md  justfile
apps/cli/: BUILD.bazel  pyproject.toml
apps/cli/src/: cli.py
apps/gui/: BUILD.bazel  pyproject.toml
apps/gui/src/: gui.py
cli/: BUILD.bazel  pyproject.toml
cli/src/: cli.py
gui/: BUILD.bazel
gui/src/: gui.py
libs/compressor/: BUILD.bazel  pyproject.toml
libs/compressor/src/compressor/: tools.py
requirements/: BUILD.bazel  requirements.in  requirements_lock_3_13.txt
